--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -41,7 +41,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .container-center {display:flex;flex-direction:column;justify-content:center;}
 .content {padding:0 16px;}
 /* .modal__content .content {padding:0 24px;} */
-/* .modal__content .content.content-fluid > * {margin:0 -24px;} */
+.modal__content .content.content-fluid > * {margin:0 -16px;}
 
 /* bottom-btn */
 .bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white-100);z-index:calc(var(--header-zIndex) - 100);}
@@ -53,6 +53,18 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .btn-wrap > * {flex:1;}
 .btn-wrap .btn-secondary {flex:0 1 100px;}
 
-
+/* select-option */
+.select-option {}
+.select-option ul {}
+.select-option ul li {}
+.select-option ul li button {position:relative;display:block;width:100%;padding:0 24px;height:60px;}
+.select-option ul li button span {display:inline;font-size:16px;font-weight:500;color:var(--typography-title);vertical-align:middle;line-height:25px;}
+.select-option ul li button i {display:inline-block;font-size:13px;font-weight:500;color:var(--typography-gray);line-height:1;padding:6px 8px;border-radius:50px;background-color:var(--background-bg_lightGray);vertical-align:middle;margin-left:8px;}
+.select-option ul li.select-all button {}
+.select-option ul li.select-all button span,
+.select-option ul li.select-all button i {font-weight:700;}
+.select-option ul li.is-selected button {background-color:var(--background-bg_gray);padding-right:52px;}
+.select-option ul li.is-selected button i {background-color:var(--background-bg_white);}
+.select-option ul li.is-selected button:after {content:'';position:absolute;right:24px;top:50%;margin-top:-14px;display:block;width:28px;height:28px;background:url(../images/ico/ico_select_option.svg) center center / contain no-repeat;}
 
 
