--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -54,7 +54,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .btn-wrap .btn-secondary {flex:0 1 100px;}
 
 /* select-option */
-.select-option {}
+.select-option {padding-bottom:16px;}
 .select-option ul {}
 .select-option ul li {}
 .select-option ul li button {position:relative;display:block;width:100%;padding:0 24px;height:60px;}
