--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -324,9 +324,9 @@
 								<li class="select-all"><button type="button"><span>전체</span><i>10</i></button></li>
 								<li><button type="button"><span>키맨</span><i>2</i></button></li>
 								<li><button type="button"><span>내가 등록한 명함</span><i>5</i></button></li>
+								<li><button type="button"><span>내가 등록한 명함 내가 등록한 명함 내가 등록한 명함</span><i>5</i></button></li>
 								<li class="is-selected"><button type="button" aria-label="선택됨"><span>PB 1팀</span><i>3</i></button></li>
-								<li><button type="button"><span>내가 등록한 명함내가 등록한 명함내가 등록한 명함내가 등록한 명함</span><i>5</i></button></li>
-								<!-- <li class="is-selected"><button type="button" aria-label="선택됨"><span>내가 등록한 명함내가 등록한 명함내가 등록한 명함내가 등록한 명함</span><i>3</i></button></li> -->
+								<li class="is-selected"><button type="button" aria-label="선택됨"><span>내가 등록한 명함 내가 등록한 명함 내가 등록한 명함 내가 등록한 명함</span><i>3</i></button></li>
 							</ul>
 						</div>
 					</div>
