--- a/html/components/component_text_items.html
+++ b/html/components/component_text_items.html
@@ -74,10 +74,27 @@
 		<p>Headline, Title, Body</p>
 
 		<div class="ui-guide-section">
+			<h2>Description</h2>
 			<div class="ui-guide-box">
-				<p class="description">메세지 타이틀 line1</p>
-				<p class="description info">메세지 타이틀 line1</p>
+				<p class="description">description</p>
+				<p class="description info">description info</p>
+				<p class="description caution">description caution</p>
 			</div>
+			<h2>Size</h2>
+			<div class="ui-guide-box">
+				<h3 class="description headline-large">headline-large</h3>
+				<h3 class="description headline-medium">headline-medium</h3>
+				<h3 class="description headline-small">headline-small</h3>
+				<h3 class="description title-large">title-large</h3>
+				<h3 class="description title-medium">title-medium</h3>
+				<h3 class="description title-small">title-small</h3>
+				<p class="description body-xlarge">body-xlarge</p>
+				<p class="description body-large">body-large</p>
+				<p class="description body-medium">body-medium</p>
+				<p class="description body-small">body-small</p>
+			</div>
+
+
 		</div>
 
 
