--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -59,12 +59,9 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .select-option ul li {}
 .select-option ul li button {position:relative;display:block;width:100%;padding:0 24px;height:60px;}
 .select-option ul li button span {display:inline;font-size:16px;font-weight:500;color:var(--typography-title);vertical-align:middle;line-height:25px;}
-.select-option ul li button i {display:inline-block;font-size:13px;font-weight:500;color:var(--typography-gray);line-height:1;padding:6px 8px;border-radius:50px;background-color:var(--background-bg_lightGray);vertical-align:middle;margin-left:8px;}
 .select-option ul li.select-all button {}
-.select-option ul li.select-all button span,
-.select-option ul li.select-all button i {font-weight:700;}
-.select-option ul li.is-selected button {background-color:var(--background-bg_gray);padding-right:52px;}
-.select-option ul li.is-selected button i {background-color:var(--background-bg_white);}
-.select-option ul li.is-selected button:after {content:'';position:absolute;right:24px;top:50%;margin-top:-14px;display:block;width:28px;height:28px;background:url(../images/ico/ico_select_option.svg) center center / contain no-repeat;}
+.select-option ul li.select-all button span {font-weight:700;}
+.select-option ul li.select-active button {background-color:var(--background-bg_gray);padding-right:52px;}
+.select-option ul li.select-active button:after {content:'';position:absolute;right:24px;top:50%;margin-top:-14px;display:block;width:28px;height:28px;background:url(../images/ico/ico_select_option.svg) center center / contain no-repeat;}
 
 
