--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -4,8 +4,8 @@
 /* sweetalert2 */
 div:where(.swal2-container) div:where(.swal2-popup) {width:calc(100vw - 72px);border-radius:8px;padding-bottom:0;overflow:hidden;}
 
-div:where(.swal2-container) h2:where(.swal2-title) {font-size:18px;color:var(--typography-title);text-align:left;padding:24px 24px 8px;font-weight:400;}
-div:where(.swal2-container) .swal2-html-container {margin:8px 24px;font-size:16px;line-height:inherit;color:var(--typography-body);}
+div:where(.swal2-container) h2:where(.swal2-title) {font-size:18px;color:var(--typography-title);text-align:left;padding:24px 24px 8px;font-weight:500;}
+div:where(.swal2-container) .swal2-html-container {margin:16px 24px 0;}
 div:where(.swal2-container) div:where(.swal2-actions).btn-wrap {margin:0;padding:16px;}
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert {flex:1;font-size:16px;font-weight:700;line-height:60px;color:var(--gray900);text-align:center;}
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert:not(:last-child) {border-right:1px solid var(--gray100);}
@@ -18,13 +18,9 @@ div:where(.swal2-container).swal2-backdrop-show, div:where(.swal2-container).swa
     80% {transform:scale(0.99)}
     100% {transform:scale(1)}
 }
+div:where(.swal2-container) button:where(.swal2-close) {position:absolute;font-size:0;width:24px;height:24px;right:24px;top:24px;background:url(../images/ico/ico_close.svg) center center / contain no-repeat;}
+div:where(.swal2-container) button:where(.swal2-close):hover {}
 
-/* quill */
-select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initial;;padding:initial;background:#fff;border-radius:initial;}
-/* highlightjs */
-.highlightjs {display:flex;}
-.highlightjs pre {display:flex;flex:1;}
-.highlightjs pre code {flex:1;}
 
 
 /* micromodal */
@@ -97,3 +93,4 @@ select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initi
 .toast-error .toast-title:before {background:url(../images/toastr/ico_error.svg) center center / contain no-repeat;}
 .toast-bottom-center {bottom:12px;}
 .toast-bottom-center.has-bottom-btn {bottom:76px;}
+#toast-container>div:hover {box-shadow:none;}
