--- a/assets/css/ui-variable.css
+++ b/assets/css/ui-variable.css
@@ -476,3 +476,241 @@
 .fc-typography-placeholder{color:var(--typography-placeholder)!important;}
 .fc-typography-title{color:var(--typography-title)!important;}
 .fc-typography-white{color:var(--typography-white)!important;}
+
+.bg-black-0{background-color:var(--black-0)!important;}
+.bg-black-100{background-color:var(--black-100)!important;}
+.bg-black-12{background-color:var(--black-12)!important;}
+.bg-black-16{background-color:var(--black-16)!important;}
+.bg-black-20{background-color:var(--black-20)!important;}
+.bg-black-24{background-color:var(--black-24)!important;}
+.bg-black-32{background-color:var(--black-32)!important;}
+.bg-black-4{background-color:var(--black-4)!important;}
+.bg-black-40{background-color:var(--black-40)!important;}
+.bg-black-56{background-color:var(--black-56)!important;}
+.bg-black-60{background-color:var(--black-60)!important;}
+.bg-black-72{background-color:var(--black-72)!important;}
+.bg-black-8{background-color:var(--black-8)!important;}
+.bg-black-80{background-color:var(--black-80)!important;}
+.bg-black-88{background-color:var(--black-88)!important;}
+.bg-black-96{background-color:var(--black-96)!important;}
+.bg-blue-100{background-color:var(--blue-100)!important;}
+.bg-blue-200{background-color:var(--blue-200)!important;}
+.bg-blue-300{background-color:var(--blue-300)!important;}
+.bg-blue-400{background-color:var(--blue-400)!important;}
+.bg-blue-50{background-color:var(--blue-50)!important;}
+.bg-blue-500{background-color:var(--blue-500)!important;}
+.bg-blue-600{background-color:var(--blue-600)!important;}
+.bg-blue-700{background-color:var(--blue-700)!important;}
+.bg-blue-800{background-color:var(--blue-800)!important;}
+.bg-blue-900{background-color:var(--blue-900)!important;}
+.bg-cyan-100{background-color:var(--cyan-100)!important;}
+.bg-cyan-200{background-color:var(--cyan-200)!important;}
+.bg-cyan-300{background-color:var(--cyan-300)!important;}
+.bg-cyan-400{background-color:var(--cyan-400)!important;}
+.bg-cyan-50{background-color:var(--cyan-50)!important;}
+.bg-cyan-500{background-color:var(--cyan-500)!important;}
+.bg-cyan-600{background-color:var(--cyan-600)!important;}
+.bg-cyan-700{background-color:var(--cyan-700)!important;}
+.bg-cyan-800{background-color:var(--cyan-800)!important;}
+.bg-cyan-900{background-color:var(--cyan-900)!important;}
+.bg-deepblue-100{background-color:var(--deepblue-100)!important;}
+.bg-deepblue-200{background-color:var(--deepblue-200)!important;}
+.bg-deepblue-300{background-color:var(--deepblue-300)!important;}
+.bg-deepblue-400{background-color:var(--deepblue-400)!important;}
+.bg-deepblue-50{background-color:var(--deepblue-50)!important;}
+.bg-deepblue-500{background-color:var(--deepblue-500)!important;}
+.bg-deepblue-600{background-color:var(--deepblue-600)!important;}
+.bg-deepblue-700{background-color:var(--deepblue-700)!important;}
+.bg-deepblue-800{background-color:var(--deepblue-800)!important;}
+.bg-deepblue-900{background-color:var(--deepblue-900)!important;}
+.bg-gray-200{background-color:var(--gray-200)!important;}
+.bg-gray-300{background-color:var(--gray-300)!important;}
+.bg-gray-400{background-color:var(--gray-400)!important;}
+.bg-gray-50{background-color:var(--gray-50)!important;}
+.bg-gray-500{background-color:var(--gray-500)!important;}
+.bg-gray-600{background-color:var(--gray-600)!important;}
+.bg-gray-700{background-color:var(--gray-700)!important;}
+.bg-gray-800{background-color:var(--gray-800)!important;}
+.bg-gray-900{background-color:var(--gray-900)!important;}
+.bg-green-100{background-color:var(--green-100)!important;}
+.bg-green-200{background-color:var(--green-200)!important;}
+.bg-green-300{background-color:var(--green-300)!important;}
+.bg-green-400{background-color:var(--green-400)!important;}
+.bg-green-50{background-color:var(--green-50)!important;}
+.bg-green-500{background-color:var(--green-500)!important;}
+.bg-green-600{background-color:var(--green-600)!important;}
+.bg-green-700{background-color:var(--green-700)!important;}
+.bg-green-800{background-color:var(--green-800)!important;}
+.bg-green-900{background-color:var(--green-900)!important;}
+.bg-pink-100{background-color:var(--pink-100)!important;}
+.bg-pink-200{background-color:var(--pink-200)!important;}
+.bg-pink-300{background-color:var(--pink-300)!important;}
+.bg-pink-400{background-color:var(--pink-400)!important;}
+.bg-pink-50{background-color:var(--pink-50)!important;}
+.bg-pink-500{background-color:var(--pink-500)!important;}
+.bg-pink-600{background-color:var(--pink-600)!important;}
+.bg-pink-700{background-color:var(--pink-700)!important;}
+.bg-pink-800{background-color:var(--pink-800)!important;}
+.bg-pink-900{background-color:var(--pink-900)!important;}
+.bg-purple-100{background-color:var(--purple-100)!important;}
+.bg-purple-200{background-color:var(--purple-200)!important;}
+.bg-purple-300{background-color:var(--purple-300)!important;}
+.bg-purple-400{background-color:var(--purple-400)!important;}
+.bg-purple-50{background-color:var(--purple-50)!important;}
+.bg-purple-500{background-color:var(--purple-500)!important;}
+.bg-purple-600{background-color:var(--purple-600)!important;}
+.bg-purple-700{background-color:var(--purple-700)!important;}
+.bg-purple-800{background-color:var(--purple-800)!important;}
+.bg-purple-900{background-color:var(--purple-900)!important;}
+.bg-red-100{background-color:var(--red-100)!important;}
+.bg-red-200{background-color:var(--red-200)!important;}
+.bg-red-300{background-color:var(--red-300)!important;}
+.bg-red-400{background-color:var(--red-400)!important;}
+.bg-red-50{background-color:var(--red-50)!important;}
+.bg-red-500{background-color:var(--red-500)!important;}
+.bg-red-600{background-color:var(--red-600)!important;}
+.bg-red-700{background-color:var(--red-700)!important;}
+.bg-red-800{background-color:var(--red-800)!important;}
+.bg-red-900{background-color:var(--red-900)!important;}
+.bg-violet-100{background-color:var(--violet-100)!important;}
+.bg-violet-200{background-color:var(--violet-200)!important;}
+.bg-violet-300{background-color:var(--violet-300)!important;}
+.bg-violet-400{background-color:var(--violet-400)!important;}
+.bg-violet-50{background-color:var(--violet-50)!important;}
+.bg-violet-500{background-color:var(--violet-500)!important;}
+.bg-violet-600{background-color:var(--violet-600)!important;}
+.bg-violet-700{background-color:var(--violet-700)!important;}
+.bg-violet-800{background-color:var(--violet-800)!important;}
+.bg-violet-900{background-color:var(--violet-900)!important;}
+.bg-white-0{background-color:var(--white-0)!important;}
+.bg-white-100{background-color:var(--white-100)!important;}
+.bg-white-12{background-color:var(--white-12)!important;}
+.bg-white-16{background-color:var(--white-16)!important;}
+.bg-white-20{background-color:var(--white-20)!important;}
+.bg-white-24{background-color:var(--white-24)!important;}
+.bg-white-32{background-color:var(--white-32)!important;}
+.bg-white-4{background-color:var(--white-4)!important;}
+.bg-white-40{background-color:var(--white-40)!important;}
+.bg-white-56{background-color:var(--white-56)!important;}
+.bg-white-60{background-color:var(--white-60)!important;}
+.bg-white-72{background-color:var(--white-72)!important;}
+.bg-white-8{background-color:var(--white-8)!important;}
+.bg-white-80{background-color:var(--white-80)!important;}
+.bg-white-88{background-color:var(--white-88)!important;}
+.bg-white-96{background-color:var(--white-96)!important;}
+.bg-yellow-100{background-color:var(--yellow-100)!important;}
+.bg-yellow-200{background-color:var(--yellow-200)!important;}
+.bg-yellow-300{background-color:var(--yellow-300)!important;}
+.bg-yellow-400{background-color:var(--yellow-400)!important;}
+.bg-yellow-50{background-color:var(--yellow-50)!important;}
+.bg-yellow-500{background-color:var(--yellow-500)!important;}
+.bg-yellow-600{background-color:var(--yellow-600)!important;}
+.bg-yellow-700{background-color:var(--yellow-700)!important;}
+.bg-yellow-800{background-color:var(--yellow-800)!important;}
+.bg-yellow-900{background-color:var(--yellow-900)!important;}
+.bg-background-bg_blue{background-color:var(--background-bg_blue)!important;}
+.bg-background-bg_cyan{background-color:var(--background-bg_cyan)!important;}
+.bg-background-bg_deepBlue{background-color:var(--background-bg_deepBlue)!important;}
+.bg-background-bg_deepGray{background-color:var(--background-bg_deepGray)!important;}
+.bg-background-bg_disabled{background-color:var(--background-bg_disabled)!important;}
+.bg-background-bg_gray{background-color:var(--background-bg_gray)!important;}
+.bg-background-bg_lightGray{background-color:var(--background-bg_lightGray)!important;}
+.bg-background-bg_lightBlue{background-color:var(--background-bg_lightBlue)!important;}
+.bg-background-bg_lightCyan{background-color:var(--background-bg_lightCyan)!important;}
+.bg-background-bg_lightPink{background-color:var(--background-bg_lightPink)!important;}
+.bg-background-bg_lightPurple{background-color:var(--background-bg_lightPurple)!important;}
+.bg-background-bg_lightRed{background-color:var(--background-bg_lightRed)!important;}
+.bg-background-bg_lightViolet{background-color:var(--background-bg_lightViolet)!important;}
+.bg-background-bg_lightYellow{background-color:var(--background-bg_lightYellow)!important;}
+.bg-background-bg_pink{background-color:var(--background-bg_pink)!important;}
+.bg-background-bg_purple{background-color:var(--background-bg_purple)!important;}
+.bg-background-bg_red{background-color:var(--background-bg_red)!important;}
+.bg-background-bg_violet{background-color:var(--background-bg_violet)!important;}
+.bg-background-bg_white{background-color:var(--background-bg_white)!important;}
+.bg-background-bg_yellow{background-color:var(--background-bg_yellow)!important;}
+.bg-basic-black{background-color:var(--basic-black)!important;}
+.bg-basic-white{background-color:var(--basic-white)!important;}
+.bg-border-0{background-color:var(--border-0)!important;}
+.bg-border-12{background-color:var(--border-12)!important;}
+.bg-border-4{background-color:var(--border-4)!important;}
+.bg-border-72{background-color:var(--border-72)!important;}
+.bg-border-8{background-color:var(--border-8)!important;}
+.bg-border-primary_enabled{background-color:var(--border-primary_enabled)!important;}
+.bg-brandPrimary-blue400{background-color:var(--brandPrimary-blue400)!important;}
+.bg-brandPrimary-blue500{background-color:var(--brandPrimary-blue500)!important;}
+.bg-brandPrimary-blue600{background-color:var(--brandPrimary-blue600)!important;}
+.bg-button-ghost-border{background-color:var(--button-ghost-border)!important;}
+.bg-button-ghost-disabled{background-color:var(--button-ghost-disabled)!important;}
+.bg-button-ghost-enabled{background-color:var(--button-ghost-enabled)!important;}
+.bg-button-ghost-onDisabled{background-color:var(--button-ghost-onDisabled)!important;}
+.bg-button-ghost-onEnabled{background-color:var(--button-ghost-onEnabled)!important;}
+.bg-button-ghost-pressed{background-color:var(--button-ghost-pressed)!important;}
+.bg-button-ghostw-border{background-color:var(--button-ghostw-border)!important;}
+.bg-button-ghostw-border_disabled{background-color:var(--button-ghostw-border_disabled)!important;}
+.bg-button-ghostw-disabled{background-color:var(--button-ghostw-disabled)!important;}
+.bg-button-ghostw-enabled{background-color:var(--button-ghostw-enabled)!important;}
+.bg-button-ghostw-onDisabled{background-color:var(--button-ghostw-onDisabled)!important;}
+.bg-button-ghostw-onEnabled{background-color:var(--button-ghostw-onEnabled)!important;}
+.bg-button-ghostw-pressed{background-color:var(--button-ghostw-pressed)!important;}
+.bg-button-outlined-border{background-color:var(--button-outlined-border)!important;}
+.bg-button-outlined-disabled{background-color:var(--button-outlined-disabled)!important;}
+.bg-button-outlined-enabled{background-color:var(--button-outlined-enabled)!important;}
+.bg-button-outlined-onDisabled{background-color:var(--button-outlined-onDisabled)!important;}
+.bg-button-outlined-onEnabled{background-color:var(--button-outlined-onEnabled)!important;}
+.bg-button-outlined-pressed{background-color:var(--button-outlined-pressed)!important;}
+.bg-button-primary-disabled{background-color:var(--button-primary-disabled)!important;}
+.bg-button-primary-enabled{background-color:var(--button-primary-enabled)!important;}
+.bg-button-primary-onDisabled{background-color:var(--button-primary-onDisabled)!important;}
+.bg-button-primary-onEnabled{background-color:var(--button-primary-onEnabled)!important;}
+.bg-button-primary-pressed{background-color:var(--button-primary-pressed)!important;}
+.bg-button-secondary-disabled{background-color:var(--button-secondary-disabled)!important;}
+.bg-button-secondary-enabled{background-color:var(--button-secondary-enabled)!important;}
+.bg-button-secondary-onDisabled{background-color:var(--button-secondary-onDisabled)!important;}
+.bg-button-secondary-onEnabled{background-color:var(--button-secondary-onEnabled)!important;}
+.bg-button-secondary-pressed{background-color:var(--button-secondary-pressed)!important;}
+.bg-button-tertiary-disabled{background-color:var(--button-tertiary-disabled)!important;}
+.bg-button-tertiary-enabled{background-color:var(--button-tertiary-enabled)!important;}
+.bg-button-tertiary-onDisabled{background-color:var(--button-tertiary-onDisabled)!important;}
+.bg-button-tertiary-onEnabled{background-color:var(--button-tertiary-onEnabled)!important;}
+.bg-button-tertiary-pressed{background-color:var(--button-tertiary-pressed)!important;}
+.bg-button-textBtn-Enabled{background-color:var(--button-textBtn-Enabled)!important;}
+.bg-icon-default{background-color:var(--icon-default)!important;}
+.bg-icon-disabled{background-color:var(--icon-disabled)!important;}
+.bg-icon-gray_1{background-color:var(--icon-gray_1)!important;}
+.bg-icon-gray_2{background-color:var(--icon-gray_2)!important;}
+.bg-icon-white{background-color:var(--icon-white)!important;}
+.bg-shadow-blue_1{background-color:var(--shadow-blue_1)!important;}
+.bg-shadow-blue_2{background-color:var(--shadow-blue_2)!important;}
+.bg-shadow-blue_3{background-color:var(--shadow-blue_3)!important;}
+.bg-shadow-gray_1{background-color:var(--shadow-gray_1)!important;}
+.bg-shadow-gray_2{background-color:var(--shadow-gray_2)!important;}
+.bg-shadow-gray_3{background-color:var(--shadow-gray_3)!important;}
+.bg-status-active{background-color:var(--status-active)!important;}
+.bg-status-caution{background-color:var(--status-caution)!important;}
+.bg-status-dimmed{background-color:var(--status-dimmed)!important;}
+.bg-status-error{background-color:var(--status-error)!important;}
+.bg-status-help{background-color:var(--status-help)!important;}
+.bg-status-info{background-color:var(--status-info)!important;}
+.bg-status-success{background-color:var(--status-success)!important;}
+.bg-status-focused{background-color:var(--status-focused)!important;}
+.bg-status-disabled_bg{background-color:var(--status-disabled_bg)!important;}
+.bg-status-disabled_font{background-color:var(--status-disabled_font)!important;}
+.bg-surface-surface{background-color:var(--surface-surface)!important;}
+.bg-surface-surface0{background-color:var(--surface-surface0)!important;}
+.bg-surface-surface100{background-color:var(--surface-surface100)!important;}
+.bg-surface-surface200{background-color:var(--surface-surface200)!important;}
+.bg-surface-surface300{background-color:var(--surface-surface300)!important;}
+.bg-surface-surface400{background-color:var(--surface-surface400)!important;}
+.bg-surface-surface50{background-color:var(--surface-surface50)!important;}
+.bg-surface-surface500{background-color:var(--surface-surface500)!important;}
+.bg-surface-surface700{background-color:var(--surface-surface700)!important;}
+.bg-surface-surface800{background-color:var(--surface-surface800)!important;}
+.bg-surface-surface900{background-color:var(--surface-surface900)!important;}
+.bg-typography-black{background-color:var(--typography-black)!important;}
+.bg-typography-body{background-color:var(--typography-body)!important;}
+.bg-typography-caption{background-color:var(--typography-caption)!important;}
+.bg-typography-disabled{background-color:var(--typography-disabled)!important;}
+.bg-typography-gray{background-color:var(--typography-gray)!important;}
+.bg-typography-placeholder{background-color:var(--typography-placeholder)!important;}
+.bg-typography-title{background-color:var(--typography-title)!important;}
+.bg-typography-white{background-color:var(--typography-white)!important;}
