--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
+
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -46,7 +47,6 @@
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
 	<!-- //[plugins] -->
 
-	<!-- ui source -->
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
 	<link rel="stylesheet" href="../../assets/css/ui-variable.css">
 	<link rel="stylesheet" href="../../assets/css/ui-default.css">
@@ -59,156 +59,83 @@
 	<script src="../../assets/js/ui-script.js"></script>
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
+
 	<style>
-		.ui-guide .ui-guide-box dl dd {
+		.ui-guide .guide-column-list {
 			display: flex;
+			flex-direction: row;
 			align-items: center;
-			justify-content: space-between;
+			gap: 10px;
+		}
+
+		.ui-guide .guide-column-list i {
+			zoom: 2;
+			font-size: 10px;
 		}
 	</style>
 </head>
 
 <body>
 	<div class="ui-guide">
-		<h1>Typography</h1>
-		<p>Headline, Title, Body</p>
+		<h1>Alert</h1>
+		<p>Modal Popup</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Headline</h2>
-				<hr>
-				<dl>
-					<dt>Large</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 24px / 140%
-						</div>
-						<div class="right">
-							<h1 class="headline-large">헤드라인</h1>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Medium</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 22px / 140%
-						</div>
-						<div class="right">
-							<h1 class="headline-medium">헤드라인</h1>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Small</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 20px / 140%
-						</div>
-						<div class="right">
-							<h1 class="headline-small">헤드라인</h1>
-						</div>
-					</dd>
-				</dl>
+				<h2>Size</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48">48</i>
+					<i class="icon-only icon-32">32</i>
+					<i class="icon-only icon-28">28</i>
+					<i class="icon-only icon-24">24</i>
+					<i class="icon-only icon-20">20</i>
+					<i class="icon-only icon-14">14</i>
+					<i class="icon-only icon-12">12</i>
+				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Title</h2>
-				<hr>
-				<dl>
-					<dt>Large</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 18px / 150%
-						</div>
-						<div class="right">
-							<h1 class="title-large">타이틀</h1>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Medium</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 16px / 150%
-						</div>
-						<div class="right">
-							<h1 class="title-medium">타이틀</h1>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Small</dt>
-					<dd>
-						<div class="left">
-							Pretendard Bold <br> 14px / 150%
-						</div>
-						<div class="right">
-							<h1 class="title-small">타이틀</h1>
-						</div>
-					</dd>
-				</dl>
+				<h2>icon-info</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-32 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-28 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-24 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-20 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-14 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-12 icon-info bg-icon bg-icon-default"></i>
+				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Body</h2>
-				<hr>
-				<dl>
-					<dt>XLarge</dt>
-					<dd>
-						<div class="left">
-							Pretendard Regular <br> 18px / 160%
-						</div>
-						<div class="right">
-							<p class="body-xlarge">본문 텍스트입니다.</p>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Large</dt>
-					<dd>
-						<div class="left">
-							Pretendard Regular <br> 16px / 160%
-						</div>
-						<div class="right">
-							<p class="body-large">본문 텍스트입니다.</p>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Medium</dt>
-					<dd>
-						<div class="left">
-							Pretendard Regular <br> 14px / 160%
-						</div>
-						<div class="right">
-							<p class="body-medium">본문 텍스트입니다.</p>
-						</div>
-					</dd>
-				</dl>
-				<hr>
-				<dl>
-					<dt>Small</dt>
-					<dd>
-						<div class="left">
-							Pretendard Regular <br> 13px / 160%
-						</div>
-						<div class="right">
-							<p class="body-small">본문 텍스트입니다.</p>
-						</div>
-					</dd>
-				</dl>
+				<h2>icon-caution</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-caution bg-icon bg-icon-gray_1"></i>
+				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-camera</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-camera bg-icon bg-icon-gray_1"></i>
+				</div>
+			</div>
+
 		</div>
-
-
 	</div>
 </body>
+
 
 </html>
